--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  background-image: url('./food-wallpaper.jpg');
+  background-color: #ececec;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 30%;
+  padding: 0 20px;
+
 }
